RESOLVED FIXED43209
[Qt] QtTestBrowser: -resizes-to-contents command line parameter is broken
https://bugs.webkit.org/show_bug.cgi?id=43209
Summary [Qt] QtTestBrowser: -resizes-to-contents command line parameter is broken
Antonio Gomes
Reported 2010-07-29 13:53:52 PDT
try running the launcher with the following command line: $ run-launcher --qt -graphicsbased -resizes-to-contents I'll launcher in GraphicsView mode and ResizesToContents (Developers->GraphicsView->Toggle Resizes To Contents Mode) menu item toggle ON, however the property is not set in fact. Browser through sites that require scrollbars, and they will show up. It applies to other supported command line parameters too.
Attachments
patch v1 (4.69 KB, patch)
2010-07-29 18:54 PDT, Antonio Gomes
no flags
Antonio Gomes
Comment 1 2010-07-29 18:46:11 PDT
Lets fix -resizes-to-contents for now
Antonio Gomes
Comment 2 2010-07-29 18:54:05 PDT
Created attachment 63021 [details] patch v1 When -resizes-to-content was being passed as a command line parameter it was simply not being set (although the corresponding menu item was marked as ON). User had to toggle the menu OFF and then ON again for it to take place. Reason: LauncherWindow::applyPrefs method sets many user options passed in from the command line, but not resizesToContents. Patch addresses that.
Antonio Gomes
Comment 3 2010-07-30 06:34:40 PDT
Comment on attachment 63021 [details] patch v1 Clearing flags on attachment: 63021 Committed r64354: <http://trac.webkit.org/changeset/64354>
Note You need to log in before you can comment on or make changes to this bug.