2010-07-29  Antonio Gomes  <tonikitoo@webkit.org>

Reviewed by Kenneth Christiansen.

        [Qt] QtTestBrowser: -resizes-to-contents command line parameter is broken
        https://bugs.webkit.org/show_bug.cgi?id=43209

        When -resizes-to-content was being passed as a command line parameter it was simply
        not being set (although the corresponding menu item was marked as ON).
        User had to toggle the menu OFF and then ON again for it to take place.

        Reason: LauncherWindow::applyPrefs method sets many user options passed in from
        the command line, but not resizesToContents. Patch addresses that.

        * QtTestBrowser/launcherwindow.cpp:
        (LauncherWindow::createChrome):
        (LauncherWindow::applyPrefs):
        (LauncherWindow::toggleResizesToContents):
        * QtTestBrowser/webview.h:
        (WebViewGraphicsBased::resizesToContents):

Canonical link: https://commits.webkit.org/55177@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64354 268f45cc-cd09-0410-ab3c-d52691b4dbfc